--- a/common/prometheus-server/templates/servicemonitors/endpoint-sd.yaml
+++ b/common/prometheus-server/templates/servicemonitors/endpoint-sd.yaml
@@ -68,19 +68,7 @@ spec:
         - action: labelmap
           replacement: __param_$1
           regex: '__meta_kubernetes_service_annotation_prometheus_io_scrape_param_(.+)'
-        - action: replace
-          targetLabel: region
-          replacement: {{ required ".Values.global.region undefined" .Values.global.region }}
-        {{ if .Values.global.clusterType }}
-        - action: replace
-          targetLabel: cluster_type
-          replacement: {{ .Values.global.clusterType }}
-        {{ end }}
-        {{ if .Values.global.cluster }}
-        - action: replace
-          targetLabel: cluster
-          replacement: {{ .Values.global.cluster }}
-        {{ end }}
+{{ include "prometheus.defaultRelabelConfig" . | indent 8 }}
 
     - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
       interval: 60s
@@ -131,17 +119,5 @@ spec:
         - action: labelmap
           replacement: __param_$1
           regex: '__meta_kubernetes_service_annotation_prometheus_io_scrape_param_(.+)'
-        - action: replace
-          targetLabel: region
-          replacement: {{ required ".Values.global.region undefined" .Values.global.region }}
-        {{ if .Values.global.clusterType }}
-        - action: replace
-          targetLabel: cluster_type
-          replacement: {{ .Values.global.clusterType }}
-        {{ end }}
-        {{ if .Values.global.cluster }}
-        - action: replace
-          targetLabel: cluster
-          replacement: {{ .Values.global.cluster }}
-        {{ end }}
+{{ include "prometheus.defaultRelabelConfig" . | indent 8 }}
 {{- end }}
