--- a/common/prometheus-server/values.yaml
+++ b/common/prometheus-server/values.yaml
@@ -5,9 +5,9 @@ global:
   # The TLD as used in the URL.
   domain:
 
-  # Optional type of the cluster to which the Prometheus is deployed.
+  # Type of the cluster to which the Prometheus is deployed.
   # Choose between: controlplane, kubernikus-controlplane, kubernikus-scaleout.
-  # clusterType:
+  clusterType: controlplane
 
   # Optional name of the cluster to which the Prometheus is deployed.
   # Defaults to region if not set.
@@ -129,11 +129,6 @@ serviceAccount:
 thanos:
   # Enable Thanos components and Prometheus sidecar.
   enabled: false
-
-  # DNS name for Thanos to discover peers through.
-  # If `thanos.spec.peers` is set this values is ignored
-  # Defaults to `thanos-peers.{{ .Release.Namespace }}.svc:10900`
-  peers: ""
 
   # Deploy an OpenstackSeed custom resource triggering creation of an Openstack user and Swift container used to persist Prometheus metrics.
   # See: https://github.com/sapcc/kubernetes-operators/tree/master/openstack-seeder
