--- a/common/prometheus-server/templates/alertmanager-config.yaml
+++ b/common/prometheus-server/templates/alertmanager-config.yaml
@@ -8,5 +8,5 @@ metadata:
     prometheus: {{ include "prometheus.name" . }}
 
 data:
-  config.yaml: {{ include "alertmanager.config" . | b64enc }}
+  config.yaml: {{ include (print .Template.BasePath "/_alertmanager.yaml.tpl") . | b64enc }}
 {{- end }}
