--- a/common/prometheus-server/templates/service.yaml
+++ b/common/prometheus-server/templates/service.yaml
@@ -13,5 +13,7 @@ spec:
   ports:
     - name: http
       port: 9090
+    {{ if .Values.thanos.enabled -}}
     - name: grpc
       port: 10901
+    {{- end }}
