supernova: internet-facing ingress

--- a/global/supernova/values.yaml
+++ b/global/supernova/values.yaml
@@ -8,6 +8,7 @@ image:
   tag: latest
   pullPolicy: IfNotPresent
 
-# ingress:
+ingress:
+  internet_facing: false
 #   enabled: false
 #   probe: true
