--- a/global/supernova/templates/ingress.yaml
+++ b/global/supernova/templates/ingress.yaml
@@ -4,6 +4,9 @@ kind: Ingress
 metadata:
   name: supernova
   annotations:
+    {{- if .Values.ingress.internet_facing }}
+      ingress.kubernetes.io/ingress.class: nginx-internet
+    {{- end }}  
     ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: {{ default true .Values.ingress.pass_certificate_to_upstream | quote }}
     ingress.kubernetes.io/auth-tls-secret: kube-system/ingress-cacrt
     ingress.kubernetes.io/auth-tls-verify-client: "optional"
