[hermes] add audit_admin role

--- a/openstack/hermes/templates/keystone-seed.yaml
+++ b/openstack/hermes/templates/keystone-seed.yaml
@@ -10,6 +10,7 @@ spec:
 
   roles:
     - name: audit_viewer
+    - name: audit_admin
 
   services:
     - name:        hermes
@@ -34,25 +35,25 @@ spec:
         - name: admin
           role_assignments:
           - domain: Default
-            role: audit_viewer
+            role: audit_admin
           - project: admin
-            role: audit_viewer
+            role: audit_admin
       groups:
         - name: administrators
           role_assignments:
             - domain: Default
-              role: audit_viewer
+              role: audit_admin
             - project: admin
-              role: audit_viewer
+              role: audit_admin
 
     - name: ccadmin
       projects:
         - name: master
           role_assignments:
           - group: CCADMIN_CLOUD_ADMINS
-            role: audit_viewer
+            role: audit_admin
           - group: CCADMIN_DOMAIN_ADMINS
-            role: audit_viewer
+            role: audit_admin
           - group: CCADMIN_MONITORING_USERS
             role: audit_viewer
       groups:
