[netapp-cap-exp] Init

--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -75,6 +75,9 @@ cloudprober_exporter:
 netapp_exporter:
   enabled: false
 
+netapp_cap_exporter:
+  enabled: false
+
 netapp_perf_exporter:
   enabled: false
 
