supernova: improvements on ingress settings

--- a/global/supernova/templates/ingress.yaml
+++ b/global/supernova/templates/ingress.yaml
@@ -13,7 +13,7 @@ metadata:
     ingress.kubernetes.io/auth-tls-verify-depth: "1"
     vice-president: {{ default false .Values.ingress.vice_president | quote }}
     ingress.kubernetes.io/affinity: "cookie"
-    disco: "true"
+    ingress.kubernetes.io/ssl-redirect: "true"
 spec:
   tls:
      - secretName: supernova
