--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -99,3 +99,9 @@ dependencies:
     repository: file://vendor/alertmanager-exporter
     version: 0.1.0
     condition: alertmanager_exporter.enabled
+
+  - name: esxi-exporter
+    alias: esxi_exporter
+    repository: file://vendor/esxi-exporter
+    version: 1.0.0
+    condition: esxi_exporter.enabled
