--- a/common/prometheus-server/templates/alerts/prometheus-thanos-alerts.yaml
+++ b/common/prometheus-server/templates/alerts/prometheus-thanos-alerts.yaml
@@ -1,6 +1,6 @@
 {{- $root := . }}
 {{- if and .Values.alertmanagers .Values.thanos.enabled }}
-{{- range tuple "compaction" "query" "sidecar" "store" }}
+{{- range tuple "compactor" "query" "sidecar" "store" }}
 {{- $path := (printf "%s/alerts/_thanos-%s.alerts.tpl" $root.Template.BasePath . ) }}
 ---
 apiVersion: monitoring.coreos.com/v1
