--- a/system/kube-proxy/values.yaml
+++ b/system/kube-proxy/values.yaml
@@ -7,4 +7,4 @@ kubernetes:
   server: https://qa-de-1-c67f19d507d543a3a9eaa3607729826f.kubernikus-v.qa-de-1.cloud.sap
 
 selector:   false
-toleration: false
+toleration: true 
