--- a/system/kube-system/requirements.yaml
+++ b/system/kube-system/requirements.yaml
@@ -16,3 +16,8 @@ dependencies:
     repository: https://charts.eu-de-2.cloud.sap
     version: 1.1.2
     condition: disco.enabled
+
+  - name: kube-proxy 
+    repository: https://charts.eu-de-2.cloud.sap
+    version: 0.0.1
+    condition: kube-proxy.enabled
