enable selector by default

--- a/system/kube-proxy/values.yaml
+++ b/system/kube-proxy/values.yaml
@@ -6,5 +6,5 @@ kubernetes:
   version: v1.8.15
   server: https://qa-de-1-c67f19d507d543a3a9eaa3607729826f.kubernikus-v.qa-de-1.cloud.sap
 
-selector:   false
+selector:   true 
 toleration: true 
