--- a/system/kube-proxy/values.yaml
+++ b/system/kube-proxy/values.yaml
@@ -5,6 +5,7 @@ image:
 kubernetes:
   version: v1.8.15
   server: https://qa-de-1-c67f19d507d543a3a9eaa3607729826f.kubernikus-v.qa-de-1.cloud.sap
+  clusterCIDR: 100.64.0.0/10
 
 selector:   true 
 toleration: true 
