adds missing privileged security context

--- a/system/kube-proxy/templates/daemonset.yaml
+++ b/system/kube-proxy/templates/daemonset.yaml
@@ -63,6 +63,8 @@ spec:
         kubernetes.cloud.sap/provisioned-by: kubernikus
 {{- end }}
       serviceAccountName: kube-proxy
+      securityContext:
+        privileged: true
       tolerations:
 {{- if .Values.toleration }}
         - key: "kubernetes.cloud.sap/unification"
