[maia] thanos config

--- a/openstack/maia/templates/etc/_maia.conf
+++ b/openstack/maia/templates/etc/_maia.conf
@@ -3,7 +3,7 @@
 {{- if .Values.prometheus.enabled }}
 prometheus_url = "http://prometheus-maia:{{.Values.prometheus.listen_port}}"
 {{- else }}
-prometheus_url = "http://{{.Values.maia.prometheus_url}}/thanos:{{.Values.prometheus.listen_port}}"
+prometheus_url = "http://{{.Values.maia.prometheus_url}}:{{.Values.prometheus.listen_port}}"
 {{- end }}
 bind_address = "0.0.0.0:{{.Values.maia.listen_port}}"
 #proxy = "http://localhost:8889"
