adding support access for DNS

--- a/openstack/designate/templates/seeds.yaml
+++ b/openstack/designate/templates/seeds.yaml
@@ -114,6 +114,10 @@ spec:
         role: cloud_dns_admin
       - project: master
         role: cloud_dns_admin
+    - name: CCADMIN_API_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_admin
     - name: CCADMIN_COMPUTE_SUPPORT
       role_assignments:
       - project: master
@@ -123,6 +127,10 @@ spec:
       - project: master
         role: cloud_dns_ops
     - name: CCADMIN_STORAGE_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
+    - name: CCADMIN_SERVICE_DESK
       role_assignments:
       - project: master
         role: cloud_dns_ops
@@ -178,6 +186,26 @@ spec:
       - domain: bs
         role: cloud_dns_ops
         inherited: true
+    - name: BS_API_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_admin
+    - name: BS_COMPUTE_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
+    - name: BS_NETWORK_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
+    - name: BS_STORAGE_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
+    - name: BS_SERVICE_DESK
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
     role_assignments:
     - user: admin@Default
       role: cloud_dns_admin
@@ -195,6 +223,26 @@ spec:
       - domain: cp
         role: cloud_dns_ops
         inherited: true
+    - name: CP_API_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_admin
+    - name: CP_COMPUTE_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
+    - name: CP_NETWORK_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
+    - name: CP_STORAGE_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
+    - name: CP_SERVICE_DESK
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
     role_assignments:
     - user: admin@Default
       role: cloud_dns_admin
@@ -212,6 +260,26 @@ spec:
       - domain: fsn
         role: cloud_dns_ops
         inherited: true
+    - name: FSN_API_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_admin
+    - name: FSN_COMPUTE_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
+    - name: FSN_NETWORK_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
+    - name: FSN_STORAGE_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
+    - name: FSN_SERVICE_DESK
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
     role_assignments:
     - user: admin@Default
       role: cloud_dns_admin
@@ -229,6 +297,26 @@ spec:
       - domain: hcm
         role: cloud_dns_ops
         inherited: true
+    - name: HCM_API_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_admin
+    - name: HCM_COMPUTE_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
+    - name: HCM_NETWORK_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
+    - name: HCM_STORAGE_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
+    - name: HCM_SERVICE_DESK
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops        
     role_assignments:
     - user: admin@Default
       role: cloud_dns_admin
@@ -246,6 +334,26 @@ spec:
       - domain: hcp03
         role: cloud_dns_ops
         inherited: true
+    - name: HCP03_API_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_admin
+    - name: HCP03_COMPUTE_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
+    - name: HCP03_NETWORK_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
+    - name: HCP03_STORAGE_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
+    - name: HCP03_SERVICE_DESK
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
     role_assignments:
     - user: admin@Default
       role: cloud_dns_admin
@@ -263,6 +371,26 @@ spec:
       - domain: hec
         role: cloud_dns_ops
         inherited: true
+    - name: HEC_API_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_admin
+    - name: HEC_COMPUTE_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
+    - name: HEC_NETWORK_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
+    - name: HEC_STORAGE_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
+    - name: HEC_SERVICE_DESK
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
     role_assignments:
     - user: admin@Default
       role: cloud_dns_admin
@@ -280,6 +408,26 @@ spec:
       - domain: monsoon3
         role: cloud_dns_ops
         inherited: true
+    - name: MONSOON3_API_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_admin
+    - name: MONSOON3_COMPUTE_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
+    - name: MONSOON3_NETWORK_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
+    - name: MONSOON3_STORAGE_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
+    - name: MONSOON3_SERVICE_DESK
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
     role_assignments:
     - user: admin@Default
       role: cloud_dns_admin
@@ -297,6 +445,26 @@ spec:
       - domain: neo
         role: cloud_dns_ops
         inherited: true
+    - name: NEO_API_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_admin
+    - name: NEO_COMPUTE_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
+    - name: NEO_NETWORK_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
+    - name: NEO_STORAGE_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
+    - name: NEO_SERVICE_DESK
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
     role_assignments:
     - user: admin@Default
       role: cloud_dns_admin
@@ -314,6 +482,26 @@ spec:
       - domain: s4
         role: cloud_dns_ops
         inherited: true
+    - name: S4_API_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_admin
+    - name: S4_COMPUTE_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
+    - name: S4_NETWORK_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
+    - name: S4_STORAGE_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
+    - name: S4_SERVICE_DESK
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
     role_assignments:
     - user: admin@Default
       role: cloud_dns_admin
@@ -331,6 +519,26 @@ spec:
       - domain: wbs
         role: cloud_dns_ops
         inherited: true
+    - name: WBS_API_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_admin
+    - name: WBS_COMPUTE_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
+    - name: WBS_NETWORK_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
+    - name: WBS_STORAGE_SUPPORT
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
+    - name: WBS_SERVICE_DESK
+      role_assignments:
+      - project: master
+        role: cloud_dns_ops
     role_assignments:
     - user: admin@Default
       role: cloud_dns_admin
