elk: merge to elk developments

--- a/system/elk/requirements.yaml
+++ b/system/elk/requirements.yaml
@@ -28,15 +28,27 @@ dependencies:
     version: 2.0.0
     condition: kibana.enabled
 
-#  - name: fluent
-#    repository: file://vendor/fluent
-#    version: 2.0.0
-#    condition: fluent.enabled
+  - name: fluent
+    repository: file://vendor/fluent
+    version: 2.0.0
+    condition: fluent.enabled
 
-#  - name: logstash
-#    repository: file://vendor/logstash
-#    version: 2.0.0
-#    condition: logstash.enabled
+  - name: fluent-systemd
+    alias: fluent_systemd
+    repository: file://vendor/fluent-systemd
+    version: 2.0.0
+    condition: fluent-systemd.enabled
+
+  - name: fluent-vcenter
+    alias: fluent_vcenter
+    repository: file://vendor/fluent-vcenter
+    version: 2.0.0
+    condition: fluent-vcenter.enabled
+
+  - name: logstash
+    repository: file://vendor/logstash
+    version: 2.0.0
+    condition: logstash.enabled
 
   - name: wall-e
     alias: wall_e
