--- a/system/elk/values.yaml
+++ b/system/elk/values.yaml
@@ -23,6 +23,14 @@ logstash:
 
 fluent:
   enabled: false
+  port: 8885
+
+fluent_systemd:
+  enabled: false
+  port: 8886
+
+fluent_vcenter:
+  enabled: false
 
 es_exporter:
   enabled: false
