--- a/common/mysql_metrics/templates/deployment-promexp.yaml
+++ b/common/mysql_metrics/templates/deployment-promexp.yaml
@@ -22,7 +22,7 @@ spec:
     annotations:
       chart-version: {{ .Chart.Version }}
       prometheus.io/scrape: "true"
-      prometheus.io/port: "{{ .Values.port_metrics_promexp }}"
+      prometheus.io/port: {{ required ".Values.port_metrics_promexp missing" .Values.port_metrics_promexp | quote }}
       prometheus.io/targets: {{ required ".Values.alerts.prometheus missing" .Values.alerts.prometheus | quote }}
 
    spec:
@@ -49,10 +49,10 @@ spec:
           timeoutSeconds: 10
         env:
           - name: DATA_SOURCE_NAME
-            value: "{{ .Values.db_user }}:{{ .Values.db_password }}@tcp({{ include (print .Release.Name "_db_host") . }}:3306)/"
+            value: "{{ required ".Values.db_user missing" .Values.db_user }}:{{ required ".Values.db_password missing" .Values.db_password }}@tcp({{ include (print .Release.Name "_db_host") . }}:3306)/"
         ports:
           - name: metrics
-            containerPort: {{ .Values.port_metrics_promexp }}
+            containerPort: {{ required ".Values.port_metrics_promexp missing" .Values.port_metrics_promexp }}
         resources:
           limits:
             cpu: 250m
