elk: fix all in one elk repo

--- a/system/elk/requirements.yaml
+++ b/system/elk/requirements.yaml
@@ -3,25 +3,25 @@ dependencies:
     alias: es_master
     repository: file://vendor/es-master
     version: 2.0.0
-    condition: es-master.enabled
+    condition: es_master.enabled
 
   - name: es-client
     alias: es_client
     repository: file://vendor/es-client
     version: 2.0.0
-    condition: es-client.enabled
+    condition: es_client.enabled
 
   - name: es-data
     alias: es_data
     repository: file://vendor/es-data
     version: 2.0.0
-    condition: es-data.enabled
+    condition: es_data.enabled
 
   - name: es-manager
     alias: es_manager
     repository: file://vendor/es-manager
     version: 2.0.0
-    condition: es-manager.enabled
+    condition: es_manager.enabled
 
   - name: kibana
     repository: file://vendor/kibana
@@ -37,13 +37,13 @@ dependencies:
     alias: fluent_systemd
     repository: file://vendor/fluent-systemd
     version: 2.0.0
-    condition: fluent-systemd.enabled
+    condition: fluent_systemd.enabled
 
   - name: fluent-vcenter
     alias: fluent_vcenter
     repository: file://vendor/fluent-vcenter
     version: 2.0.0
-    condition: fluent-vcenter.enabled
+    condition: fluent_vcenter.enabled
 
   - name: logstash
     repository: file://vendor/logstash
@@ -54,16 +54,16 @@ dependencies:
     alias: wall_e
     repository: file://vendor/wall-e
     version: 2.0.0
-    condition: wall-e.enabled
+    condition: wall_e.enabled
 
   - name: es-exporter
     alias: es_exporter
     repository: file://vendor/es-exporter
     version: 2.0.0
-    condition: es-exporter.enabled
+    condition: es_exporter.enabled
 
   - name: es-query-exporter
     alias: es_query_exporter
     repository: file://vendor/es-query-exporter
     version: 2.0.0
-    condition: es-query-exporter.enabled
+    condition: es_query_exporter.enabled
