--- a/common/mariadb/templates/deployment.yaml
+++ b/common/mariadb/templates/deployment.yaml
@@ -57,7 +57,7 @@ spec:
           failureThreshold: {{ .Values.readinessProbe.failureThreshold }}
         {{- end }}
         volumeMounts:
-{{- if .Values.persistence_claim }}
+{{- if .Values.persistence_claim.enabled }}
           - name: mariadb-persistent-storage
             mountPath: /var/lib/mysql
             readOnly: false
@@ -103,7 +103,7 @@ spec:
           - name: BACKUP_MYSQL_INCR
             value: {{ .Values.backup.interval_incr | quote }}
         volumeMounts:
-{{- if .Values.persistence_claim }}
+{{- if .Values.persistence_claim.enabled }}
         - mountPath: /db/data
           name: mariadb-persistent-storage
           readOnly: true
@@ -115,10 +115,10 @@ spec:
         - name: mariadb-etc
           configMap:
             name: mariadb-{{.Values.name}}-etc
-{{- if .Values.persistence_claim }}
+{{- if .Values.persistence_claim.enabled }}
         - name: mariadb-persistent-storage
           persistentVolumeClaim:
-           claimName: {{.Values.persistence_claim }}
+           claimName: {{ .Values.persistence_claim.name |  default (include "fullName" . ) }}
 {{- end }}
 {{- if .Values.backup.enabled }}
         - name: db-socket
