--- a/common/mariadb/values.yaml
+++ b/common/mariadb/values.yaml
@@ -9,9 +9,16 @@ port_public: 3306
 #
 #root_password:
 #initdb_configmap:
-#persistence_claim:
-persistence_claim_size: "10Gi"
-persistence_claim_autoprovision: false
+persistence_claim:
+  enabled: true
+  #name:
+  size: "10Gi"
+  access_modes:
+  - ReadWriteOnce
+  - ReadWriteMany
+  - ReadOnlyMany
+  autoprovision: false
+  #storage_class: default
 
 livenessProbe:
   enabled: true
