--- a/openstack/keystone/templates/deployment-cron.yaml
+++ b/openstack/keystone/templates/deployment-cron.yaml
@@ -53,7 +53,12 @@ spec:
   {{- end }}
 {{- end }}
         - name: DEPENDENCY_SERVICE
+{{- if .Values.postgresql.enabled }}
+          value: {{ .Release.Name }}-postgresql
+{{- end }}
+{{- if .Values.mariadb.enabled }}
           value: {{ .Release.Name }}-mariadb
+{{- end }}
         - name: COMMAND
           value: "true"
       containers:
