--- a/openstack/keystone/requirements.yaml
+++ b/openstack/keystone/requirements.yaml
@@ -8,9 +8,11 @@ dependencies:
   - name: postgresql
     repository: file://../../common/postgresql
     version: 0.3.0
+    condition: postgresql.enabled
   - name: pgmetrics
     repository: file://../../common/pgmetrics
     version: 0.1.0
+    condition: postgresql.enabled
   - name: mariadb
     repository: file://../../common/mariadb
     version: 0.1.1
