adding support access for DNS

--- a/openstack/designate/templates/seeds.yaml
+++ b/openstack/designate/templates/seeds.yaml
@@ -118,22 +118,37 @@ spec:
       role_assignments:
       - project: master
         role: cloud_dns_admin
+      - domain: ccadmin
+        role: cloud_dns_admin 
+        inherited: true
     - name: CCADMIN_COMPUTE_SUPPORT
       role_assignments:
       - project: master
         role: cloud_dns_ops
+      - domain: ccadmin 
+        role: cloud_dns_ops 
+        inherited: true
     - name: CCADMIN_NETWORK_SUPPORT
       role_assignments:
       - project: master
         role: cloud_dns_ops
+      - domain: ccadmin 
+        role: cloud_dns_ops 
+        inherited: true        
     - name: CCADMIN_STORAGE_SUPPORT
       role_assignments:
       - project: master
         role: cloud_dns_ops
+      - domain: ccadmin 
+        role: cloud_dns_ops 
+        inherited: true        
     - name: CCADMIN_SERVICE_DESK
       role_assignments:
       - project: master
         role: cloud_dns_ops
+      - domain: ccadmin 
+        role: cloud_dns_ops 
+        inherited: true        
     - name: CCADMIN_MONITORING_USERS
       role_assignments:
       - project: master
@@ -188,24 +203,29 @@ spec:
         inherited: true
     - name: BS_API_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_admin
+      - domain: bs
+        role: cloud_dns_admin 
+        inherited: true
     - name: BS_COMPUTE_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: bs
+        role: cloud_dns_ops 
+        inherited: true
     - name: BS_NETWORK_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: bs
+        role: cloud_dns_ops 
+        inherited: true
     - name: BS_STORAGE_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: bs
+        role: cloud_dns_ops 
+        inherited: true
     - name: BS_SERVICE_DESK
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: bs
+        role: cloud_dns_ops 
+        inherited: true
     role_assignments:
     - user: admin@Default
       role: cloud_dns_admin
@@ -225,24 +245,29 @@ spec:
         inherited: true
     - name: CP_API_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_admin
+      - domain: cp
+        role: cloud_dns_admin 
+        inherited: true
     - name: CP_COMPUTE_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: cp
+        role: cloud_dns_ops 
+        inherited: true
     - name: CP_NETWORK_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: cp
+        role: cloud_dns_ops 
+        inherited: true
     - name: CP_STORAGE_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: cp
+        role: cloud_dns_ops 
+        inherited: true
     - name: CP_SERVICE_DESK
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: cp
+        role: cloud_dns_ops 
+        inherited: true
     role_assignments:
     - user: admin@Default
       role: cloud_dns_admin
@@ -262,24 +287,29 @@ spec:
         inherited: true
     - name: FSN_API_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_admin
+      - domain: fsn
+        role: cloud_dns_admin 
+        inherited: true
     - name: FSN_COMPUTE_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: fsn
+        role: cloud_dns_ops 
+        inherited: true
     - name: FSN_NETWORK_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: fsn
+        role: cloud_dns_ops 
+        inherited: true
     - name: FSN_STORAGE_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: fsn
+        role: cloud_dns_ops 
+        inherited: true
     - name: FSN_SERVICE_DESK
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: fsn
+        role: cloud_dns_ops 
+        inherited: true
     role_assignments:
     - user: admin@Default
       role: cloud_dns_admin
@@ -299,24 +329,29 @@ spec:
         inherited: true
     - name: HCM_API_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_admin
+      - domain: hcm
+        role: cloud_dns_admin 
+        inherited: true
     - name: HCM_COMPUTE_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: hcm
+        role: cloud_dns_ops 
+        inherited: true
     - name: HCM_NETWORK_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: hcm
+        role: cloud_dns_ops 
+        inherited: true
     - name: HCM_STORAGE_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: hcm
+        role: cloud_dns_ops 
+        inherited: true
     - name: HCM_SERVICE_DESK
       role_assignments:
-      - project: master
-        role: cloud_dns_ops        
+      - domain: hcm
+        role: cloud_dns_ops 
+        inherited: true
     role_assignments:
     - user: admin@Default
       role: cloud_dns_admin
@@ -336,24 +371,29 @@ spec:
         inherited: true
     - name: HCP03_API_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_admin
+      - domain: hcp03
+        role: cloud_dns_admin 
+        inherited: true
     - name: HCP03_COMPUTE_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: hcp03
+        role: cloud_dns_ops 
+        inherited: true
     - name: HCP03_NETWORK_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: hcp03
+        role: cloud_dns_ops 
+        inherited: true
     - name: HCP03_STORAGE_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: hcp03
+        role: cloud_dns_ops 
+        inherited: true
     - name: HCP03_SERVICE_DESK
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: hcp03
+        role: cloud_dns_ops 
+        inherited: true
     role_assignments:
     - user: admin@Default
       role: cloud_dns_admin
@@ -373,24 +413,29 @@ spec:
         inherited: true
     - name: HEC_API_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_admin
+      - domain: hec
+        role: cloud_dns_admin 
+        inherited: true
     - name: HEC_COMPUTE_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: hec
+        role: cloud_dns_ops 
+        inherited: true
     - name: HEC_NETWORK_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: hec
+        role: cloud_dns_ops 
+        inherited: true
     - name: HEC_STORAGE_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: hec
+        role: cloud_dns_ops 
+        inherited: true
     - name: HEC_SERVICE_DESK
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: hec
+        role: cloud_dns_ops 
+        inherited: true
     role_assignments:
     - user: admin@Default
       role: cloud_dns_admin
@@ -410,24 +455,29 @@ spec:
         inherited: true
     - name: MONSOON3_API_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_admin
+      - domain: monsoon3
+        role: cloud_dns_admin 
+        inherited: true
     - name: MONSOON3_COMPUTE_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: monsoon3
+        role: cloud_dns_ops 
+        inherited: true
     - name: MONSOON3_NETWORK_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: monsoon3
+        role: cloud_dns_ops 
+        inherited: true
     - name: MONSOON3_STORAGE_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: monsoon3
+        role: cloud_dns_ops 
+        inherited: true
     - name: MONSOON3_SERVICE_DESK
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: monsoon3
+        role: cloud_dns_ops 
+        inherited: true
     role_assignments:
     - user: admin@Default
       role: cloud_dns_admin
@@ -447,24 +497,29 @@ spec:
         inherited: true
     - name: NEO_API_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_admin
+      - domain: neo
+        role: cloud_dns_admin 
+        inherited: true
     - name: NEO_COMPUTE_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: neo
+        role: cloud_dns_ops 
+        inherited: true
     - name: NEO_NETWORK_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: neo
+        role: cloud_dns_ops 
+        inherited: true
     - name: NEO_STORAGE_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: neo
+        role: cloud_dns_ops 
+        inherited: true
     - name: NEO_SERVICE_DESK
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: neo
+        role: cloud_dns_ops 
+        inherited: true
     role_assignments:
     - user: admin@Default
       role: cloud_dns_admin
@@ -484,24 +539,29 @@ spec:
         inherited: true
     - name: S4_API_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_admin
+      - domain: s4
+        role: cloud_dns_admin 
+        inherited: true
     - name: S4_COMPUTE_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: s4
+        role: cloud_dns_ops 
+        inherited: true
     - name: S4_NETWORK_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: s4
+        role: cloud_dns_ops 
+        inherited: true
     - name: S4_STORAGE_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: s4
+        role: cloud_dns_ops 
+        inherited: true
     - name: S4_SERVICE_DESK
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: s4
+        role: cloud_dns_ops 
+        inherited: true
     role_assignments:
     - user: admin@Default
       role: cloud_dns_admin
@@ -521,24 +581,29 @@ spec:
         inherited: true
     - name: WBS_API_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_admin
+      - domain: wbs
+        role: cloud_dns_admin 
+        inherited: true
     - name: WBS_COMPUTE_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: wbs
+        role: cloud_dns_ops 
+        inherited: true
     - name: WBS_NETWORK_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: wbs
+        role: cloud_dns_ops 
+        inherited: true
     - name: WBS_STORAGE_SUPPORT
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: wbs
+        role: cloud_dns_ops 
+        inherited: true
     - name: WBS_SERVICE_DESK
       role_assignments:
-      - project: master
-        role: cloud_dns_ops
+      - domain: wbs
+        role: cloud_dns_ops 
+        inherited: true
     role_assignments:
     - user: admin@Default
       role: cloud_dns_admin
